RESOLVED FIXED22662
RenderThemeWx reports incorrectly that it can style controls
https://bugs.webkit.org/show_bug.cgi?id=22662
Summary RenderThemeWx reports incorrectly that it can style controls
Kevin Watters
Reported 2008-12-04 14:54:20 PST
RenderThemeWx's isControlStyled method is delegating to RenderTheme -- but until we have fleshed out the implementation of CSS modified "native" controls this results in incorrect layout of buttons and other form controls.
Attachments
This patch disables styled RenderTheme controls until we can flesh out the implementation. (1.64 KB, patch)
2008-12-04 14:54 PST, Kevin Watters
kevino: review+
Kevin Watters
Comment 1 2008-12-04 14:54:57 PST
Created attachment 25755 [details] This patch disables styled RenderTheme controls until we can flesh out the implementation.
Kevin Ollivier
Comment 2 2008-12-04 17:57:24 PST
Landed in r39008, thanks!
Kevin Ollivier
Comment 3 2008-12-04 17:59:39 PST
(In reply to comment #2) > Landed in r39008, thanks! > Sorry, typo. Actual commit was r39011.
Note You need to log in before you can comment on or make changes to this bug.