Reviewed by Kevin Ollivier.

Turn off styled controls until we can implement them properly.

https://bugs.webkit.org/show_bug.cgi?id=22662


Canonical link: https://commits.webkit.org/31218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39011 268f45cc-cd09-0410-ab3c-d52691b4dbfc